-
Bug
-
Resolution: Done
-
P2: Important
-
6.3.0 Feature Freeze
-
None
-
de23f28af6cb37eee0d5f69e0c56f20a640865f1 (qt/qtquick3d/dev)
The problem arises when the reflection probes were introduced. The reflection pass is called first to render the scene from the reflection probe point of view. At this point, the "generateFragmentShader" function is called and if required, the UVCoordinates will be generated for some maps. The QSSGRenderableImage is shared between passes and when the UVCoordinates is generated for the first time, the flag "uvCoordsGenerated" is set to true.
Any following pass that calls "generateFragmentShader" and then tries to generate the UVCoordinates will lead to the coordinates not generated because the flag is already set to true.
The generated fragment shader has errors.