Fix map uv coords issue with multiple passes

QSSGRenderableImage pointer is shared between
different passes. Removing the uvCoordsGenerated
flag ensures the generation of UV Coordinates when
generateFragmentShader function is called. At this
point a new shader is needed otherwise it would have
been fetched from the cache

Fixes: QTBUG-98448
Change-Id: I7a26e25fd15d7474999e000fe0a2b3f866fd595d
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>