src/runtimerender/qssgrenderableimage_p.h
@@ -80,7 +80,6 @@ struct QSSGRenderableImage
     QSSGRenderImageTexture m_texture;
     QSSGRenderableImage *m_nextImage;
     Type m_mapType;
-    bool uvCoordsGenerated = false;
     QSSGRenderableImage(Type inMapType, const QSSGRenderImage &inImageNode, const QSSGRenderImageTexture &inTexture)
         : m_imageNode(inImageNode), m_texture(inTexture), m_nextImage(nullptr),  m_mapType(inMapType)
     {
